<resources>
    <string name="app_name">Reminder App</string>
    <string name="heading_wifi_password">Wifi Password</string>
    <string name="heading_tablet_pin">Tablet PIN</string>
    <string name="heading_bike_lock">Bike Lock</string>
    <string name="hint_value">value</string>
    <string name="heading_bin_day">Bin Day</string>
    <string name="heading_adhar_number">Adhar Number</string>
    <string name="heading_birthday_date">BirthDay Date</string>

</resources>