<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_bin_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    style="@style/Icon"
                    android:id="@+id/image_view_bin_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_delete"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    style="@style/Text.Heading"
                    android:id="@+id/text_view_bin_day_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_bin_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"

                    android:text="@string/heading_bin_day"/>

                <TextView
                    style="@style/Text.Value"
                    android:id="@+id/text_view_bin_day_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_bin_day_heading"
                    app:layout_constraintStart_toStartOf="@id/text_view_bin_day_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    tools:text="Dipak@007"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_adhar_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    style="@style/Icon"
                    android:id="@+id/image_view_adhar_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_person"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    style="@style/Text.Heading"
                    android:id="@+id/text_view_adhar_number_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_adhar_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"

                    android:text="@string/heading_adhar_number"/>

                <TextView
                    style="@style/Text.Value"
                    android:id="@+id/text_view_adhar_number_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_adhar_number_heading"
                    app:layout_constraintStart_toStartOf="@id/text_view_adhar_number_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    tools:text="Dipak@007"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_birthday_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    style="@style/Icon"
                    android:id="@+id/image_view_birthday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_cake"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    style="@style/Text.Heading"
                    android:id="@+id/text_view_birthday_date_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_birthday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"

                    android:text="@string/heading_birthday_date"/>

                <TextView
                    style="@style/Text.Value"
                    android:id="@+id/text_view_birthday_date_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_birthday_date_heading"
                    app:layout_constraintStart_toStartOf="@id/text_view_birthday_date_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    tools:text="Dipak@007"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</ScrollView>