<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_wifi"
            style="@style/Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    style="@style/Icon"
                    android:id="@+id/image_view_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_wifi"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    style="@style/Text.Heading"
                    android:id="@+id/text_view_wifi_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"

                    android:text="@string/heading_wifi_password"/>

                <TextView
                    style="@style/Text.Value"
                    android:id="@+id/text_view_wifi_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_wifi_heading"
                   app:layout_constraintStart_toStartOf="@id/text_view_wifi_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    tools:text="Dipak@007"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_tablet_pin"
            android:layout_width="match_parent"
            style="@style/Card"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    style="@style/Icon"
                    android:id="@+id/image_view_tablet_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_computer"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    style="@style/Text.Heading"
                    android:id="@+id/text_view_tablet_pin_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_tablet_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"

                    android:text="@string/heading_tablet_pin"/>

                <TextView
                    style="@style/Text.Value"
                    android:id="@+id/text_view_tablet_pin_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_tablet_pin_heading"
                    app:layout_constraintStart_toStartOf="@id/text_view_tablet_pin_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    tools:text="Dipak@007"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_bike_lock"
            android:layout_width="match_parent"
            style="@style/Card"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    style="@style/Icon"
                    android:id="@+id/image_view_bike_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_bike"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    style="@style/Text.Heading"
                    android:id="@+id/text_view_bike_lock_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_bike_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/heading_bike_lock"/>

                <TextView
                    style="@style/Text.Value"
                    android:id="@+id/text_view_bike_lock_value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_bike_lock_heading"
                    app:layout_constraintStart_toStartOf="@id/text_view_bike_lock_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    tools:text="Dipak@007"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>





    </LinearLayout>


</ScrollView>